# Tree23

./: .gitmodules  CMakeLists.txt  MakefileGeneral  README.md  Tree23.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  program.cpp  tree23.cpp  tree23.h
submodules/LibToTree23/: LibToTree23.pro  btree.cpp  btree.h  libtotree23.h  nodeOfBTree.cpp  nodeOfBTree.h
subprojects/LibToTree23/: LibToTree23.pro  libtotree23.cpp
